--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mailen Role-Play</title>
@@ -12,7 +12,7 @@
 
 <header>
   <div class="header">
-      <img class="header_logo" src="assets/images/logo.jpg" alt="Mailen" />
+      <img class="header_logo" src="logo.jpg" alt="Mailen" />
   </div>
   <div class="promo">
     <div class="container">
