--- a/new.html
+++ b/new.html
@@ -22,7 +22,7 @@
   </header>
 </div>
 <div class="quotes_txt"> 
-    <h2>"There is best quote here."</h2>
+    <h2>"There is the best quote here."</h2>
 </div>
 <div class="quotes_txt2">
 </div>
