--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 <script src="new.js"></script>
-  <title>New Era Project</title>
+  <title>Draft</title>
 </head>
 
 <body>
