--- a/index.html
+++ b/index.html
@@ -33,13 +33,32 @@
             </div>
             <nav class="nav-bar">
 
-            <a href="#" class="nav-btns">Home</a>
-            <a href="#" class="nav-btns">About Us</a>
-            <a href="#" class="nav-btns">Portfolio</a>
-            <a href="#" class="nav-btns">Contacts</a>
+                <a href="#" class="nav-btns">Home</a>
+                <a href="#" class="nav-btns">About Us</a>
+                <a href="#" class="nav-btns">Portfolio</a>
+                <a href="#" class="nav-btns">Contacts</a>
+
+            </nav>
+
+        </div>
+        
+    </header>
+
+    <header>
+        <nav class="nav-barM">
+
+            <a href="#" class="nav-btnsM">Home</a>
+            <a href="#" class="nav-btnsM">About Us</a>
+            <a href="#" class="nav-btnsM">Portfolio</a>
+            <a href="#" class="nav-btnsM">Contacts</a>
 
         </nav>
+
     </header>
+
+
+
+
 
     <div class="content">
 
@@ -57,7 +76,9 @@
      <div class="art-img-cont">
 
         <div class="art-img">
-            <img src="img/main-art" alt="art">
+           
+
+
         </div>
 
     </div>
