--- a/index.html
+++ b/index.html
@@ -1,5 +1,58 @@
-<html>
-  <head></head>
-  <title>Html</title>
-    <body><h1>:)</h1></body>
+<!DOCTYPE html>
+<html lang="ru" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Ackna-project</title>
+    <link rel="shortcut icon" href="assets/icons/logo-svg.svg">
+    <link rel="stylesheet" href="assets/css/main.css">
+  </head>
+  <body>
+
+<div class=all-content>
+    <header class="nav-panel">
+        <div class="logo-text">
+          <img src="assets/icons/logo-svg.svg" alt="logo" class="logo-img">
+          <span class="logo-text">Ackna-project</span>
+        </div>
+        <ul id="nav-btn-block" class="nav-btn-block">
+          <li class="nav-btn active-nav-btn">Главная</li>
+          <li class="nav-btn">О нас</li>
+          <li class="nav-btn">Форум</li>
+        </ul>
+        <div class="login-btn-block">
+          <a class="login-btn" href="#">Войти</a>
+        </div>
+    </header>
+
+    <div class="main-text-land-block">
+      <section class="main-text-conteiner">
+        <div class="main-text">
+          <h1 class="main-title">Мир таинств ждёт тебя!</h1>
+          <p class="main-par">Неограниченный выбор игровых ролей и путей развития. Стань создателем своей собственной истории.</p>
+          <div class="main-btn-block">
+            <a class="btn" href="#">Правила</a>
+            <a class="btn" href="#">Играть</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="land">
+        <h1>land</h1>
+
+      </section>
+    </div>
+
+
+<div class="next-btn">
+  <img class="next" src="assets/icons/strelka.svg" alt="next">
+</div>
+
+
+
+</div><!---all-content---->
+
+<script type="text/javascript" src="scripts/main.js">
+
+</script>
+  </body>
 </html>
