--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ackna-project</title>
     <link rel="shortcut icon" href="assets/icons/logo-svg.svg">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
 
@@ -37,7 +37,8 @@
       </section>
 
       <section class="land">
-        <h1>land</h1>
+        <img src="assets/img/#" alt="land">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 662.18 719.82"><defs><style>.cls-1{opacity:0.3;fill:url(#Безымянный_градиент_6);}</style><linearGradient id="Безымянный_градиент_6" y1="359.91" x2="662.18" y2="359.91" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#09449d"/><stop offset="0.13" stop-color="#134da3"/><stop offset="0.34" stop-color="#2c64b2"/><stop offset="0.62" stop-color="#568bca"/><stop offset="0.94" stop-color="#90bfec"/><stop offset="1" stop-color="#9ccaf3"/></linearGradient></defs><title>mainGlass</title><g id="Слой_2" data-name="Слой 2"><g id="Слой_1-2" data-name="Слой 1"><path class="cls-1" d="M573,396.63c-45.95,78.64-94.55,130.84-129.13,163.42-15.55,14.65-210,195.62-278.5,153.4-69.8-43,101.92-269.06-24.16-433.35C76.19,195.32-7.55,183.36.55,138.53,18.88,37,478.78-68.63,619.55,58,718.79,147.21,620,316.36,573,396.63Z"/></g></g></svg>
 
       </section>
     </div>
