--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <span class="logo-text">Ackna-project</span>
         </div>
         <ul id="nav-btn-block" class="nav-btn-block">
-          <li class="nav-btn">Главная</li>
+          <li class="nav-btn active-nav-btn">Главная</li>
           <li class="nav-btn">О нас</li>
           <li class="nav-btn">Форум</li>
         </ul>
@@ -46,8 +46,6 @@
 <i class="next-btn">
   <img class="next" src="assets/icons/strelka.svg" alt="next">
 </i>
-
-
 
 </div><!---all-content---->
 
